# CloudSeal

./: .gitignore  README.md  gateway-ci-master.yml
.github/workflows/: auth-ci-dev.yml  auth-ci-master.yml  build-docker.yml  tests.yml  user-ci-dev.yml  user-ci-master.yml
CloudSealAPI/: CloudSealAPI.sln
CloudSealAPI/AuthService/: AuthService.csproj  AuthService.http  Dockerfile  Program.cs  appsettings.json
CloudSealAPI/AuthService.Test/: AuthService.Test.csproj  AuthServiceTests.cs
CloudSealAPI/AuthService/Controllers/: AuthController.cs
CloudSealAPI/AuthService/Data/: AuthDbContext.cs
CloudSealAPI/AuthService/Entities/: User.cs
CloudSealAPI/AuthService/Exceptions/: InvalidCredentialsException.cs  NotFoundException.cs  UsernameTakenException.cs
CloudSealAPI/AuthService/Middlewares/: ExceptionHandlingMiddleware.cs
CloudSealAPI/AuthService/Migrations/: 20250505095458_Init.Designer.cs  20250505095458_Init.cs  AuthDbContextModelSnapshot.cs
CloudSealAPI/AuthService/Models/: AuthResponse.cs  LoginRequest.cs  RegisterRequest.cs
CloudSealAPI/AuthService/Properties/: launchSettings.json
CloudSealAPI/AuthService/Services/: AuthService.cs  IAuthService.cs
CloudSealAPI/GatewayService/: Dockerfile  GatewayService.csproj  GatewayService.http  Program.cs  appsettings.json
CloudSealAPI/GatewayService/Properties/: launchSettings.json
CloudSealAPI/UserService/: Dockerfile  Program.cs  UserService.csproj  appsettings.json
CloudSealAPI/UserService.Tests/: UserService.Tests.csproj  UserServiceTest.cs
CloudSealAPI/UserService/Controllers/: UserController.cs
CloudSealAPI/UserService/Data/: UserDbContext.cs
CloudSealAPI/UserService/Entities/: User.cs
CloudSealAPI/UserService/Exceptions/: ConflictException.cs  InvalidCredentialsException.cs
CloudSealAPI/UserService/Middlewares/: ExceptionHandlingMiddleware.cs
CloudSealAPI/UserService/Migrations/: 20250510234650_InitUserDb.Designer.cs  20250510234650_InitUserDb.cs  UserDbContextModelSnapshot.cs
CloudSealAPI/UserService/Models/: KeyResponse.cs  PostKeyRequest.cs
CloudSealAPI/UserService/Properties/: launchSettings.json
CloudSealAPI/UserService/Services/: IUserService.cs  UserService.cs
CloudSealCore/: CloudSealCore.sln
CloudSealCore/CloudSealCore/: CloudLogger.cs  CloudSealCore.csproj  CloudSealCoreApp.cs  Config.cs  Program.cs
CloudSealCore/CloudSealCore/Cloud/: CloudProviderManager.cs  ICloudProvider.cs  Secrets.cs
CloudSealCore/CloudSealCore/Crypto/: AesGcmCryptoEngine.cs  AsyncDecryptingReadStream.cs  AsyncEncryptingReadStream.cs  ICryptoEngine.cs
CloudSealCore/CloudSealCore/Data/: CloudStatistics.cs  CloudStatisticsCalculator.cs
CloudSealCore/CloudSealCore/Grpc/: CloudSealService.cs
CloudSealCore/CloudSealCore/Properties/: launchSettings.json
CloudSealCore/CloudSealCore/Protos/: cloudseal.proto
CloudSealCore/CloudSealCore/Resources/: AuthComplete.html  cloudseal_dropbox.json  gdrive_credentials.json  onedrive_credentials.json
CloudSealCore/CloudSealCore/Security/: KeyVault.cs
gRPC-Client/: CMakeLists.txt  CMakePresets.json
gRPC-Client/include/: App.hpp  GUI.hpp  logger.hpp
gRPC-Client/include/qt_layer/: Layout.hpp  Object.hpp
gRPC-Client/include/qt_layer/builders/: ButtonBuilder.hpp  ObjectBuilder.hpp
gRPC-Client/include/qt_layer/components/: Button.hpp
gRPC-Client/include/qt_layer/jinja/: Loader.hpp  QMLJinja.hpp
gRPC-Client/include/qt_layer/structures/: Anchors.hpp  Inset.hpp  Margin.hpp  Padding.hpp  Point.hpp  Size.hpp
gRPC-Client/include/utils/: utils.hpp
gRPC-Client/proto/: cloudseal.proto
gRPC-Client/proto-generated/: cloudseal.grpc.pb.cc  cloudseal.grpc.pb.h
gRPC-Client/resources/templates/: Button.inja  _common_accessibility_properties.inja  _common_base_properties.inja  _common_behavior_properties.inja  _common_font_properties.inja  _common_layout_properties.inja
gRPC-Client/src/: CMakeLists.txt  main.cpp  main.qml
gRPC-Client/src/grpc_client/: main.cpp
gRPC-Client/src/utils/: QMLJinja.cpp  generate_uuid.cpp
(+14 files in other folders)
